--- a/app/templates/provider/partials/new_second_part.jade
+++ b/app/templates/provider/partials/new_second_part.jade
@@ -6,29 +6,32 @@
     input(
       type='text',
       name='banco_nombre',
-      ng-model='providerVm.providerForm.banco_nombre'
+      ng-model='providerVm.provider.banco_nombre'
     )
-  
+
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.bank.type"|translate)}}
-    select(ng-model='providerVm.providerForm.banco_tipo_cuenta')
-      option(value="{{::('provider.bank.savings'|translate)}}") 
-        | {{::("provider.bank.savings"|translate)}}
-      option(value="{{::('provider.bank.credit'|translate)}}") 
-        | {{::("provider.bank.credit"|translate)}}
-  
+    ion-list
+      ion-checkbox(
+        ng-repeat="type in providerVm.accountType",
+        ng-model="type.checked"
+        name="bankType"
+        ng-checked="type.checked"
+        ng-change="providerVm.checkedBank(type)"
+      ) {{ ::type.label }}
+
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.bank.account"|translate)}}
     input(
       type='text',
       name='banco_numero_cuenta',
-      ng-model='providerVm.providerForm.banco_numero_cuenta'
+      ng-model='providerVm.provider.banco_numero_cuenta'
     )
-  
+
   legend {{::("provider.formLegendThird"|translate)}}
-  
+
   label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': newProviderForm.direccion_matriz.$touched && newProviderForm.direccion_matriz.$error.required}"
+    ng-class="{'item-error': providerVm.providerForm.direccion_matriz.$touched && providerVm.providerForm.direccion_matriz.$invalid}"
   )
     span.input-label {{::("provider.address"|translate)}}*
     input(
@@ -37,15 +40,39 @@
       ng-model='providerVm.matrizProvider.direccion',
       required
     )
-  show-error(element='newProviderForm.direccion_matriz' message='("provider.isRequired"|translate)')
-  
-  .item.item-input.item-stacked-label
-    span.input-label {{::("provider.schedule"|translate)}}*
-    ion-datetime-picker(time ng-model='providerVm.matrizProvider.horario')
-      | {{providerVm.matrizProvider.horario| date: "H:mm"}}
-  
+  .show-errors(ng-messages="providerVm.providerForm.direccion_matriz.$error" ng-if="providerVm.providerForm.direccion_matriz.$touched")
+    span(ng-message="required" class="message-error") Campo requerido
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.openTime"|translate)}}*
+  .dateTime(ion-datetime-picker="" time="" ng-model="providerVm.matrizProvider.hora_de_apertura" required)
+    span(ng-if="!providerVm.matrizProvider.hora_de_apertura") Click para seleccionar
+    | {{providerVm.matrizProvider.hora_de_apertura| date: "H:mm"}}
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.closeTime"|translate)}}*
+  .dateTime(ion-datetime-picker="" time="" ng-model="providerVm.matrizProvider.hora_de_cierre" required)
+    span(ng-if="!providerVm.matrizProvider.hora_de_cierre") Click para seleccionar
+    | {{providerVm.matrizProvider.hora_de_cierre| date: "H:mm"}}
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.initialLaborDay"|translate)}}
+  item.item-input.item-select.select-position-adjust
+    select(
+     ng-model="providerVm.matrizProvider.inicio_de_labores"
+     ng-options="item as item.label for item in providerVm.laborDays"
+    )
+
+  label.item.item-input.item-stacked-label
+    span.input-label {{::("provider.finalLaborDay"|translate)}}
+  item.item-input.item-select.select-position-adjust
+    select(
+     ng-model="providerVm.matrizProvider.final_de_labores"
+     ng-options="item as item.label for item in providerVm.laborDays"
+    )
+
   label.item.item-input.item-stacked-label(
-    ng-class="{'item-error': newProviderForm.telefono_matriz.$touched && newProviderForm.telefono_matriz.$error.required}"
+    ng-class="{'item-error': providerVm.providerForm.telefono_matriz.$touched && providerVm.providerForm.telefono_matriz.$invalid}"
   )
     span.input-label {{::("provider.phone"|translate)}}*
     input(
@@ -54,4 +81,5 @@
       ng-model='providerVm.matrizProvider.telefono',
       required
     )
-  show-error(element='newProviderForm.telefono_matriz' message='("provider.isRequired"|translate)')
+  .show-errors(ng-messages="providerVm.providerForm.telefono_matriz.$error" ng-if="providerVm.providerForm.telefono_matriz.$touched")
+    span(ng-message="required" class="message-error") Campo requerido
