Customer-addresses view (#81)
* Add structure for customer addresses view

* Use ionic grid to show data

* Redirect to Update/New address

* Update address view

* Update and Create addresses

* Unit tests for controllers

* Unit tests for services

* Fix conflicts with master branch

* Organize and improve the code

* Remove unnecessary controller

--- a/app/styles/common/mixins.scss
+++ b/app/styles/common/mixins.scss
@@ -17,3 +17,8 @@
   margin-right: auto;
   background-position: 50%;
 }
+
+@mixin action-button-color ($custom-color) {
+  border: 3px solid $custom-color;
+  color: $custom-color;
+}
