--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,6 +16,7 @@
 @import "common/bar-footer";
 @import "common/input_icons";
 @import "common/search-input";
+@import "common/state-tabs";
 @import "common/grid";
 @import "forms/general";
 @import "forms/inputs";
@@ -30,9 +31,14 @@
 @import "provider/detail";
 @import "directives/back-button";
 @import "directives/show-error";
+@import "directives/action-button";
+@import "directives/link-button";
 @import "categories/index";
 @import "categories/show";
 @import "item/item";
 @import "client/client";
 @import "error/error";
 @import "menu/menu";
+@import "profile/profile";
+@import "profile/profile-addresses";
+@import "profile/profile-addresses-update";
