--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -9,6 +9,11 @@ ion-side-menus(enable-menu-with-back-views='false')
     ion-header-bar.bar-stable
     ion-content
       ion-list
+        ion-item(menu-close='' class='menu-header')
+          div {{siteVm.user.name}}
+          div
+            a.show-profile(ui-sref='app.profile.info')
+              | {{::("menu.profile"|translate)}}
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.client.category"|translate)}}
         ion-item(menu-close='' ui-sref='app.profile')
