--- a/app/styles/colors/colors.scss
+++ b/app/styles/colors/colors.scss
@@ -3,8 +3,10 @@ $base-yellow: #FDC30D;
 $base-blue: #9ecaed;
 $base-grey: #6A6A6D;
 $button-red: #D0021B;
+$button-blue: #2D3986;
 $search-label-grey: #C3C3C3;
 $search-input-grey: #CCCCCC;
 $facebook-blue: #2770a3;
 $error-red: #cc0000;
-$light-blue: #5AA3E8
+$light-blue: #5AA3E8;
+$link-blue: #387EF5;
