--- a/app/styles/categories/index.scss
+++ b/app/styles/categories/index.scss
@@ -1,6 +1,7 @@
 .grid-parent {
   display: flex;
   flex-wrap: wrap;
+  padding: 1px;
 
   .grid-100 {
     width: 100%;
@@ -11,15 +12,17 @@
   }
 
   .grid-content{
+    margin: 1px 0;
     text-decoration: none;
-    height: 120px;
+    height: 140px;
     background-origin: content-box;
-    padding: 2px;
+    padding: 1px;
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
     justify-content: center;
+    background-position: 50%;
 
     .title{
       text-transform: uppercase;
