--- a/app/styles/categories/show.scss
+++ b/app/styles/categories/show.scss
@@ -22,14 +22,14 @@
       text-align: center;
       .provider-card {
         background-color: $white;
-        width: 200px;
-        height: 300px;
-        margin: auto;
+        min-height: 350px;
+        margin: 5px;
         color: $base-grey;
+        position: relative;
         .img {
-          margin: auto;
-          width: 200px;
-          height: 80%;
+          position: absolute;
+          width: 100%;
+          height: 100%;
           background-repeat: no-repeat;
           background-position: center;
         }
