Add validations from backend

--- a/app/templates/provider/partials/new_first_part.jade
+++ b/app/templates/provider/partials/new_first_part.jade
@@ -15,6 +15,7 @@
     )
   .show-errors(ng-messages="providerVm.providerForm.ruc.$error" ng-if="providerVm.providerForm.ruc.$touched")
     span(ng-message="required" class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.ruc")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.razonsocial.$touched && providerVm.providerForm.razonsocial.$invalid}"
@@ -28,6 +29,7 @@
     )
   .show-errors(ng-messages="providerVm.providerForm.razonsocial.$error" ng-if="providerVm.providerForm.razonsocial.$touched")
     span(ng-message="required" class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.razon_social")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.establecimiento.$touched && providerVm.providerForm.establecimiento.$invalid}"
@@ -41,6 +43,7 @@
    )
   .show-errors(ng-messages="providerVm.providerForm.establecimiento.$error" ng-if="providerVm.providerForm.establecimiento.$touched")
     span(ng-message="required" class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.nombre_establecimiento")
 
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.economicActivity"|translate)}}
@@ -62,6 +65,7 @@
     )
   .show-errors(ng-messages="providerVm.providerForm.representante.$error" ng-if="providerVm.providerForm.representante.$touched")
     span(ng-message="required" class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.representante_legal")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.telefono.$touched && providerVm.providerForm.telefono.$invalid}"
@@ -75,6 +79,7 @@
     )
   .show-errors(ng-messages="providerVm.providerForm.telefono.$error" ng-if="providerVm.providerForm.telefono.$touched")
     span(ng-message="required" class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.telefono")
 
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.email.$touched && providerVm.newProviderForm.email.$invalid}"
@@ -90,6 +95,7 @@
   .show-errors(ng-messages="providerVm.providerForm.email.$error" ng-if="providerVm.providerForm.email.$touched")
     span(ng-message="required" class="message-error") Campo requerido
     span(ng-message="email" class="message-error") Email incorrecto
+  show-error(array-messages="providerVm.errors.email")
 
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.webSite"|translate)}}
@@ -113,6 +119,7 @@
       ) {{ ::method.label }}
   .show-errors.ng-active(ng-if="providerVm.touchedPayments && providerVm.providerForm.methodsPayment.$invalid")
     span(class='message-error' class="message-error") Campo requerido
+  show-error(array-messages="providerVm.errors.formas_de_pago")
 
   label.item.item-input.item-stacked-label
     span.input-label {{::("provider.logo"|translate)}}
