--- a/app/styles/categories/index.scss
+++ b/app/styles/categories/index.scss
@@ -14,7 +14,7 @@
   .grid-content{
     margin: 1px 0;
     text-decoration: none;
-    height: 140px;
+    height: 150px;
     background-origin: content-box;
     padding: 1px;
     background-repeat: no-repeat;
@@ -25,10 +25,12 @@
     background-position: 50%;
 
     .title{
+      font-size: 18px;
       text-transform: uppercase;
       font-family: Montserrat-Bold;
       color: $white;
       text-align: center;
+      text-shadow: -1px -1px 1px rgba(0,0,0,.3);
     }
   }
 }
