fix show welcome template after register as provider/courier and links on side menu (#91)

--- a/app/templates/menu/menu-courier.jade
+++ b/app/templates/menu/menu-courier.jade
@@ -19,6 +19,8 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.courier.history"|translate)}}
         ion-item  
           | {{::("menu.invite"|translate)}}
+        ion-item(ng-controller='LoginController as loginVm', ng-click='loginVm.logout()')
+          | {{::("menu.logout"|translate)}}
         ion-item.gray-item 
           | {{::("menu.changeTo"|translate)}}
         ion-item.user-type(menu-close='' ui-sref='app.categories.index')
