--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -16,7 +16,7 @@ ion-side-menus(enable-menu-with-back-views='false')
               | {{::("menu.profile"|translate)}}
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.client.category"|translate)}}
-        ion-item(menu-close='' ui-sref='app.profile')
+        ion-item
           | {{::("menu.account"|translate)}}
         ion-item.gray-item
           li {{::("menu.client.myOrders"|translate)}}
